src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> var_declaration
Rule 5     statement -> print_statement
Rule 6     statement -> if_statement
Rule 7     statement -> expression_statement
Rule 8     var_declaration -> VARIABLESITA ID ASIGNACION expression SEMICOLON
Rule 9     var_declaration -> ENTERITO ID ASIGNACION expression SEMICOLON
Rule 10    var_declaration -> FLOTANTITO ID ASIGNACION expression SEMICOLON
Rule 11    var_declaration -> CARACTERCITO ID ASIGNACION expression SEMICOLON
Rule 12    var_declaration -> LOGIQUITO ID ASIGNACION expression SEMICOLON
Rule 13    print_statement -> IMPRIMIR LPAREN expression RPAREN SEMICOLON
Rule 14    if_statement -> SHI LPAREN expression RPAREN LBRACE statement_list RBRACE else_statement
Rule 15    else_statement -> SHINO LBRACE statement_list RBRACE
Rule 16    else_statement -> empty
Rule 17    expression_statement -> expression SEMICOLON
Rule 18    expression -> expression SUMA expression
Rule 19    expression -> expression RESTA expression
Rule 20    expression -> expression MULTIPLICACION expression
Rule 21    expression -> expression DIVISION expression
Rule 22    expression -> expression EQEQ expression
Rule 23    expression -> expression EQEQEQ expression
Rule 24    expression -> expression GT expression
Rule 25    expression -> expression LT expression
Rule 26    expression -> expression GTE expression
Rule 27    expression -> expression LTE expression
Rule 28    expression -> expression AND expression
Rule 29    expression -> expression OR expression
Rule 30    expression -> NOT expression
Rule 31    expression -> LPAREN expression RPAREN
Rule 32    expression -> NUMERO
Rule 33    expression -> CADENA
Rule 34    expression -> BOOLEANO
Rule 35    expression -> ID
Rule 36    empty -> <empty>

Terminals, with rules where they appear

AND                  : 28
ASIGNACION           : 8 9 10 11 12
BOOLEANO             : 34
CADENA               : 33
CARACTERCITO         : 11
DIVISION             : 21
ENTERITO             : 9
EQEQ                 : 22
EQEQEQ               : 23
FLOTANTITO           : 10
GT                   : 24
GTE                  : 26
ID                   : 8 9 10 11 12 35
IMPRIMIR             : 13
LBRACE               : 14 15
LOGIQUITO            : 12
LPAREN               : 13 14 31
LT                   : 25
LTE                  : 27
MULTIPLICACION       : 20
NOT                  : 30
NUMERO               : 32
OR                   : 29
RBRACE               : 14 15
RESTA                : 19
RPAREN               : 13 14 31
SEMICOLON            : 8 9 10 11 12 13 17
SHI                  : 14
SHINO                : 15
SUMA                 : 18
VARIABLESITA         : 8
error                : 

Nonterminals, with rules where they appear

else_statement       : 14
empty                : 16
expression           : 8 9 10 11 12 13 14 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31
expression_statement : 7
if_statement         : 6
print_statement      : 5
program              : 0
statement            : 2 3
statement_list       : 1 2 14 15
var_declaration      : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . var_declaration
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . expression_statement
    (8) var_declaration -> . VARIABLESITA ID ASIGNACION expression SEMICOLON
    (9) var_declaration -> . ENTERITO ID ASIGNACION expression SEMICOLON
    (10) var_declaration -> . FLOTANTITO ID ASIGNACION expression SEMICOLON
    (11) var_declaration -> . CARACTERCITO ID ASIGNACION expression SEMICOLON
    (12) var_declaration -> . LOGIQUITO ID ASIGNACION expression SEMICOLON
    (13) print_statement -> . IMPRIMIR LPAREN expression RPAREN SEMICOLON
    (14) if_statement -> . SHI LPAREN expression RPAREN LBRACE statement_list RBRACE else_statement
    (17) expression_statement -> . expression SEMICOLON
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    VARIABLESITA    shift and go to state 8
    ENTERITO        shift and go to state 11
    FLOTANTITO      shift and go to state 12
    CARACTERCITO    shift and go to state 13
    LOGIQUITO       shift and go to state 14
    IMPRIMIR        shift and go to state 15
    SHI             shift and go to state 17
    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    var_declaration                shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    expression_statement           shift and go to state 7
    expression                     shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . var_declaration
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . expression_statement
    (8) var_declaration -> . VARIABLESITA ID ASIGNACION expression SEMICOLON
    (9) var_declaration -> . ENTERITO ID ASIGNACION expression SEMICOLON
    (10) var_declaration -> . FLOTANTITO ID ASIGNACION expression SEMICOLON
    (11) var_declaration -> . CARACTERCITO ID ASIGNACION expression SEMICOLON
    (12) var_declaration -> . LOGIQUITO ID ASIGNACION expression SEMICOLON
    (13) print_statement -> . IMPRIMIR LPAREN expression RPAREN SEMICOLON
    (14) if_statement -> . SHI LPAREN expression RPAREN LBRACE statement_list RBRACE else_statement
    (17) expression_statement -> . expression SEMICOLON
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    $end            reduce using rule 1 (program -> statement_list .)
    VARIABLESITA    shift and go to state 8
    ENTERITO        shift and go to state 11
    FLOTANTITO      shift and go to state 12
    CARACTERCITO    shift and go to state 13
    LOGIQUITO       shift and go to state 14
    IMPRIMIR        shift and go to state 15
    SHI             shift and go to state 17
    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    statement                      shift and go to state 22
    var_declaration                shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    expression_statement           shift and go to state 7
    expression                     shift and go to state 10

state 3

    (3) statement_list -> statement .

    VARIABLESITA    reduce using rule 3 (statement_list -> statement .)
    ENTERITO        reduce using rule 3 (statement_list -> statement .)
    FLOTANTITO      reduce using rule 3 (statement_list -> statement .)
    CARACTERCITO    reduce using rule 3 (statement_list -> statement .)
    LOGIQUITO       reduce using rule 3 (statement_list -> statement .)
    IMPRIMIR        reduce using rule 3 (statement_list -> statement .)
    SHI             reduce using rule 3 (statement_list -> statement .)
    NOT             reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    NUMERO          reduce using rule 3 (statement_list -> statement .)
    CADENA          reduce using rule 3 (statement_list -> statement .)
    BOOLEANO        reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> var_declaration .

    VARIABLESITA    reduce using rule 4 (statement -> var_declaration .)
    ENTERITO        reduce using rule 4 (statement -> var_declaration .)
    FLOTANTITO      reduce using rule 4 (statement -> var_declaration .)
    CARACTERCITO    reduce using rule 4 (statement -> var_declaration .)
    LOGIQUITO       reduce using rule 4 (statement -> var_declaration .)
    IMPRIMIR        reduce using rule 4 (statement -> var_declaration .)
    SHI             reduce using rule 4 (statement -> var_declaration .)
    NOT             reduce using rule 4 (statement -> var_declaration .)
    LPAREN          reduce using rule 4 (statement -> var_declaration .)
    NUMERO          reduce using rule 4 (statement -> var_declaration .)
    CADENA          reduce using rule 4 (statement -> var_declaration .)
    BOOLEANO        reduce using rule 4 (statement -> var_declaration .)
    ID              reduce using rule 4 (statement -> var_declaration .)
    $end            reduce using rule 4 (statement -> var_declaration .)
    RBRACE          reduce using rule 4 (statement -> var_declaration .)


state 5

    (5) statement -> print_statement .

    VARIABLESITA    reduce using rule 5 (statement -> print_statement .)
    ENTERITO        reduce using rule 5 (statement -> print_statement .)
    FLOTANTITO      reduce using rule 5 (statement -> print_statement .)
    CARACTERCITO    reduce using rule 5 (statement -> print_statement .)
    LOGIQUITO       reduce using rule 5 (statement -> print_statement .)
    IMPRIMIR        reduce using rule 5 (statement -> print_statement .)
    SHI             reduce using rule 5 (statement -> print_statement .)
    NOT             reduce using rule 5 (statement -> print_statement .)
    LPAREN          reduce using rule 5 (statement -> print_statement .)
    NUMERO          reduce using rule 5 (statement -> print_statement .)
    CADENA          reduce using rule 5 (statement -> print_statement .)
    BOOLEANO        reduce using rule 5 (statement -> print_statement .)
    ID              reduce using rule 5 (statement -> print_statement .)
    $end            reduce using rule 5 (statement -> print_statement .)
    RBRACE          reduce using rule 5 (statement -> print_statement .)


state 6

    (6) statement -> if_statement .

    VARIABLESITA    reduce using rule 6 (statement -> if_statement .)
    ENTERITO        reduce using rule 6 (statement -> if_statement .)
    FLOTANTITO      reduce using rule 6 (statement -> if_statement .)
    CARACTERCITO    reduce using rule 6 (statement -> if_statement .)
    LOGIQUITO       reduce using rule 6 (statement -> if_statement .)
    IMPRIMIR        reduce using rule 6 (statement -> if_statement .)
    SHI             reduce using rule 6 (statement -> if_statement .)
    NOT             reduce using rule 6 (statement -> if_statement .)
    LPAREN          reduce using rule 6 (statement -> if_statement .)
    NUMERO          reduce using rule 6 (statement -> if_statement .)
    CADENA          reduce using rule 6 (statement -> if_statement .)
    BOOLEANO        reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> expression_statement .

    VARIABLESITA    reduce using rule 7 (statement -> expression_statement .)
    ENTERITO        reduce using rule 7 (statement -> expression_statement .)
    FLOTANTITO      reduce using rule 7 (statement -> expression_statement .)
    CARACTERCITO    reduce using rule 7 (statement -> expression_statement .)
    LOGIQUITO       reduce using rule 7 (statement -> expression_statement .)
    IMPRIMIR        reduce using rule 7 (statement -> expression_statement .)
    SHI             reduce using rule 7 (statement -> expression_statement .)
    NOT             reduce using rule 7 (statement -> expression_statement .)
    LPAREN          reduce using rule 7 (statement -> expression_statement .)
    NUMERO          reduce using rule 7 (statement -> expression_statement .)
    CADENA          reduce using rule 7 (statement -> expression_statement .)
    BOOLEANO        reduce using rule 7 (statement -> expression_statement .)
    ID              reduce using rule 7 (statement -> expression_statement .)
    $end            reduce using rule 7 (statement -> expression_statement .)
    RBRACE          reduce using rule 7 (statement -> expression_statement .)


state 8

    (8) var_declaration -> VARIABLESITA . ID ASIGNACION expression SEMICOLON

    ID              shift and go to state 23


state 9

    (35) expression -> ID .

    SEMICOLON       reduce using rule 35 (expression -> ID .)
    SUMA            reduce using rule 35 (expression -> ID .)
    RESTA           reduce using rule 35 (expression -> ID .)
    MULTIPLICACION  reduce using rule 35 (expression -> ID .)
    DIVISION        reduce using rule 35 (expression -> ID .)
    EQEQ            reduce using rule 35 (expression -> ID .)
    EQEQEQ          reduce using rule 35 (expression -> ID .)
    GT              reduce using rule 35 (expression -> ID .)
    LT              reduce using rule 35 (expression -> ID .)
    GTE             reduce using rule 35 (expression -> ID .)
    LTE             reduce using rule 35 (expression -> ID .)
    AND             reduce using rule 35 (expression -> ID .)
    OR              reduce using rule 35 (expression -> ID .)
    RPAREN          reduce using rule 35 (expression -> ID .)


state 10

    (17) expression_statement -> expression . SEMICOLON
    (18) expression -> expression . SUMA expression
    (19) expression -> expression . RESTA expression
    (20) expression -> expression . MULTIPLICACION expression
    (21) expression -> expression . DIVISION expression
    (22) expression -> expression . EQEQ expression
    (23) expression -> expression . EQEQEQ expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GTE expression
    (27) expression -> expression . LTE expression
    (28) expression -> expression . AND expression
    (29) expression -> expression . OR expression

    SEMICOLON       shift and go to state 24
    SUMA            shift and go to state 25
    RESTA           shift and go to state 26
    MULTIPLICACION  shift and go to state 27
    DIVISION        shift and go to state 28
    EQEQ            shift and go to state 29
    EQEQEQ          shift and go to state 30
    GT              shift and go to state 31
    LT              shift and go to state 32
    GTE             shift and go to state 33
    LTE             shift and go to state 34
    AND             shift and go to state 35
    OR              shift and go to state 36


state 11

    (9) var_declaration -> ENTERITO . ID ASIGNACION expression SEMICOLON

    ID              shift and go to state 37


state 12

    (10) var_declaration -> FLOTANTITO . ID ASIGNACION expression SEMICOLON

    ID              shift and go to state 38


state 13

    (11) var_declaration -> CARACTERCITO . ID ASIGNACION expression SEMICOLON

    ID              shift and go to state 39


state 14

    (12) var_declaration -> LOGIQUITO . ID ASIGNACION expression SEMICOLON

    ID              shift and go to state 40


state 15

    (13) print_statement -> IMPRIMIR . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 41


state 16

    (31) expression -> LPAREN . expression RPAREN
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    expression                     shift and go to state 42

state 17

    (14) if_statement -> SHI . LPAREN expression RPAREN LBRACE statement_list RBRACE else_statement

    LPAREN          shift and go to state 43


state 18

    (30) expression -> NOT . expression
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    expression                     shift and go to state 44

state 19

    (32) expression -> NUMERO .

    SEMICOLON       reduce using rule 32 (expression -> NUMERO .)
    SUMA            reduce using rule 32 (expression -> NUMERO .)
    RESTA           reduce using rule 32 (expression -> NUMERO .)
    MULTIPLICACION  reduce using rule 32 (expression -> NUMERO .)
    DIVISION        reduce using rule 32 (expression -> NUMERO .)
    EQEQ            reduce using rule 32 (expression -> NUMERO .)
    EQEQEQ          reduce using rule 32 (expression -> NUMERO .)
    GT              reduce using rule 32 (expression -> NUMERO .)
    LT              reduce using rule 32 (expression -> NUMERO .)
    GTE             reduce using rule 32 (expression -> NUMERO .)
    LTE             reduce using rule 32 (expression -> NUMERO .)
    AND             reduce using rule 32 (expression -> NUMERO .)
    OR              reduce using rule 32 (expression -> NUMERO .)
    RPAREN          reduce using rule 32 (expression -> NUMERO .)


state 20

    (33) expression -> CADENA .

    SEMICOLON       reduce using rule 33 (expression -> CADENA .)
    SUMA            reduce using rule 33 (expression -> CADENA .)
    RESTA           reduce using rule 33 (expression -> CADENA .)
    MULTIPLICACION  reduce using rule 33 (expression -> CADENA .)
    DIVISION        reduce using rule 33 (expression -> CADENA .)
    EQEQ            reduce using rule 33 (expression -> CADENA .)
    EQEQEQ          reduce using rule 33 (expression -> CADENA .)
    GT              reduce using rule 33 (expression -> CADENA .)
    LT              reduce using rule 33 (expression -> CADENA .)
    GTE             reduce using rule 33 (expression -> CADENA .)
    LTE             reduce using rule 33 (expression -> CADENA .)
    AND             reduce using rule 33 (expression -> CADENA .)
    OR              reduce using rule 33 (expression -> CADENA .)
    RPAREN          reduce using rule 33 (expression -> CADENA .)


state 21

    (34) expression -> BOOLEANO .

    SEMICOLON       reduce using rule 34 (expression -> BOOLEANO .)
    SUMA            reduce using rule 34 (expression -> BOOLEANO .)
    RESTA           reduce using rule 34 (expression -> BOOLEANO .)
    MULTIPLICACION  reduce using rule 34 (expression -> BOOLEANO .)
    DIVISION        reduce using rule 34 (expression -> BOOLEANO .)
    EQEQ            reduce using rule 34 (expression -> BOOLEANO .)
    EQEQEQ          reduce using rule 34 (expression -> BOOLEANO .)
    GT              reduce using rule 34 (expression -> BOOLEANO .)
    LT              reduce using rule 34 (expression -> BOOLEANO .)
    GTE             reduce using rule 34 (expression -> BOOLEANO .)
    LTE             reduce using rule 34 (expression -> BOOLEANO .)
    AND             reduce using rule 34 (expression -> BOOLEANO .)
    OR              reduce using rule 34 (expression -> BOOLEANO .)
    RPAREN          reduce using rule 34 (expression -> BOOLEANO .)


state 22

    (2) statement_list -> statement_list statement .

    VARIABLESITA    reduce using rule 2 (statement_list -> statement_list statement .)
    ENTERITO        reduce using rule 2 (statement_list -> statement_list statement .)
    FLOTANTITO      reduce using rule 2 (statement_list -> statement_list statement .)
    CARACTERCITO    reduce using rule 2 (statement_list -> statement_list statement .)
    LOGIQUITO       reduce using rule 2 (statement_list -> statement_list statement .)
    IMPRIMIR        reduce using rule 2 (statement_list -> statement_list statement .)
    SHI             reduce using rule 2 (statement_list -> statement_list statement .)
    NOT             reduce using rule 2 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement_list statement .)
    NUMERO          reduce using rule 2 (statement_list -> statement_list statement .)
    CADENA          reduce using rule 2 (statement_list -> statement_list statement .)
    BOOLEANO        reduce using rule 2 (statement_list -> statement_list statement .)
    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 23

    (8) var_declaration -> VARIABLESITA ID . ASIGNACION expression SEMICOLON

    ASIGNACION      shift and go to state 45


state 24

    (17) expression_statement -> expression SEMICOLON .

    VARIABLESITA    reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    ENTERITO        reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    FLOTANTITO      reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    CARACTERCITO    reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    LOGIQUITO       reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    IMPRIMIR        reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    SHI             reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    NOT             reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    NUMERO          reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    CADENA          reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    BOOLEANO        reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    ID              reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    $end            reduce using rule 17 (expression_statement -> expression SEMICOLON .)
    RBRACE          reduce using rule 17 (expression_statement -> expression SEMICOLON .)


state 25

    (18) expression -> expression SUMA . expression
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    expression                     shift and go to state 46

state 26

    (19) expression -> expression RESTA . expression
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    expression                     shift and go to state 47

state 27

    (20) expression -> expression MULTIPLICACION . expression
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    expression                     shift and go to state 48

state 28

    (21) expression -> expression DIVISION . expression
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    expression                     shift and go to state 49

state 29

    (22) expression -> expression EQEQ . expression
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    expression                     shift and go to state 50

state 30

    (23) expression -> expression EQEQEQ . expression
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    expression                     shift and go to state 51

state 31

    (24) expression -> expression GT . expression
    (18) expression -> . expression SUMA expression
    (19) expression -> . expression RESTA expression
    (20) expression -> . expression MULTIPLICACION expression
    (21) expression -> . expression DIVISION expression
    (22) expression -> . expression EQEQ expression
    (23) expression -> . expression EQEQEQ expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression OR expression
    (30) expression -> . NOT expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMERO
    (33) expression -> . CADENA
    (34) expression -> . BOOLEANO
    (35) expression -> . ID

    NOT             shift and go to state 18
    LPAREN          shift and go to state 16
    NUMERO          shift and go to state 19
    CADENA          shift and go to state 20
    BOOLEANO        shift and go to state 21
    ID              shift and go to state 9

    expression                     shift and go to state 52

state 32
